quantity report for job, total application by month